FIX- spacing and logo

--- a/css/main.css
+++ b/css/main.css
@@ -14,10 +14,15 @@ body {
 .placeholder {
     background-color: #FFFFFF;
     min-height: 50px;
-    width: 80px;
+    width: 70px;
     text-align: center;
+    opacity: 0.8;
 }
 
 .large {
     width: 200px;
+}
+
+.logo {
+    width: 250px;
 }
